samples/_failures_safe/1761564494_f88801_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1898c203.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_1898c203.c:157:22: error: ‘TOKEN_N’ undeclared (first use in this function); did you mean ‘TOKEN_EOF’?
  157 |         token.type = TOKEN_N
      |                      ^~~~~~~
      |                      TOKEN_EOF
./samples/SAFE/__tmp_1898c203.c:157:22: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_1898c203.c:157:29: error: expected ‘;’ at end of input
  157 |         token.type = TOKEN_N
      |                             ^
      |                             ;
./samples/SAFE/__tmp_1898c203.c:157:9: error: expected declaration or statement at end of input
  157 |         token.type = TOKEN_N
      |         ^~~~~
./samples/SAFE/__tmp_1898c203.c:157:9: error: expected declaration or statement at end of input
